# CrossDot

./: CMakeLists.txt
inc/: cross_dot.h
src/: cross_dot.cpp
tests/: cross_dot_tests.cpp
